--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -48,7 +48,7 @@
 
             <a class="item" href="{% url 'master:index' %}">Home</a>
             <a class="item" href="{% url 'master:mypet' %}">My Pet</a>
-            <a class="item" href="">Feed</a>
+            <a class="item" href="{% url 'feed:feed' %}">Feed</a>
             <a class="item" href="">Hotel</a>
             <div class="right menu">
                 {% if user.is_authenticated %}
