update feed url

--- a/FeedPet/templates/addpet.html
+++ b/FeedPet/templates/addpet.html
@@ -15,6 +15,20 @@
     </div>
 
     <div class="field">
+            <label>寵物類型</label>
+            <div class="ts checkboxes">
+                <div class="ts radio checkbox">
+                    <input id="dog" type="radio" name="pettype">
+                    <label for="dog">狗</label>
+                </div>
+                <div class="ts radio checkbox">
+                    <input id="cat" type="radio" name="pettype">
+                    <label for="cat">貓</label>
+                </div>
+            </div>
+    </div>
+
+    <div class="field">
         <label>寵物品種</label>
         <input type="text" name="pet_type">
     </div>
