revise feed page

--- a/FeedPet/templates/addpet.html
+++ b/FeedPet/templates/addpet.html
@@ -37,6 +37,12 @@
         <label>寵物出生年月日</label>
         <input type="date" name="pet_birthday">
     </div>
+
+   <div class="field">
+        <label>上傳照片</label>
+        <input type="file" name="uploadfile" style="overflow: hidden" />
+    </div>
+
     <button class="ts button">新增</button>
 </form>
 
