--- a/FeedPet/templates/mypet.html
+++ b/FeedPet/templates/mypet.html
@@ -30,6 +30,13 @@
                 <label>密碼</label>
                 <input type="password" name="">
             </div>
+
+            <div class="field">
+                <label>上傳照片</label>
+                <input type="file" name="uploadfile" style="overflow: hidden" />
+            </div>
+
+
             <div class="field">
              <button class="ts button">修改送出</button>
              </div>
