--- a/FeedPet/templates/petdetail.html
+++ b/FeedPet/templates/petdetail.html
@@ -33,10 +33,32 @@
         <input type="text" name="pet_type">
     </div>
 
-  <div class="field">
+    <div class="field">
         <label>寵物出生年月日</label>
         <input type="date" name="pet_birthday">
     </div>
+
+    <div class="field">
+        <label>寵物體重</label>
+ 
+       <input type="text" name="pet_weight">
+
+    </div>
+
+     <div class="field">
+        <label>有無結紮</label>
+        <select>
+            <option>有</option>
+            <option>無</option>
+
+        </select>
+    </div>
+
+    <div class="field">
+        <label>上傳照片</label>
+        <input type="file" name="uploadfile" style="overflow: hidden" />
+    </div>
+
     <button class="ts button">確認修改</button>
 </form>
 
