complete feed page

--- a/FeedPet/templates/addpet.html
+++ b/FeedPet/templates/addpet.html
@@ -43,7 +43,10 @@
         <input type="file" name="uploadfile" style="overflow: hidden" />
     </div>
 
-    <button class="ts button">新增</button>
+    <button class="ts button">
+   <a href="/mypet">新增</a> </button>
+    {% comment %} 新增完成後要跳轉到mypet {% endcomment %}
+   
 </form>
 
 {% endblock content %}
