--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -29,7 +29,16 @@
         }
 
         .card{
-            width:300px
+            width:300px !important;
+            margin:5px !important;
+        }
+
+        .cards{
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            
         }
     </style>
     <script src="https://hpcslag.github.io/hexo-theme-morgan/demo/js/tocas.js"></script>
