complete html and rename

--- a/FeedPet/templates/feed.html
+++ b/FeedPet/templates/feed.html
@@ -62,7 +62,7 @@
             </div>
             <button class="ts button">計算餵食量</button>
             <button class="ts button">
-            <a href="{% url 'feed:feedrecommendation' %}"> 推薦飼料</a>
+            <a href="{% url 'feed:feed_recommendation' %}"> 推薦飼料</a>
            </button>
 
         </form>
