--- a/FeedPet/templates/feed_detail.html
+++ b/FeedPet/templates/feed_detail.html
@@ -44,6 +44,17 @@
         </tr>
        
     </tbody>
+
+    <tfoot>
+        <tr>
+            <th colspan="2">
+            
+             <div class="ts right floated small primary labeled icon button">
+                    <i class="heart icon"></i> 加到我的最愛
+                </div>
+            </th>
+        </tr>
+    </tfoot>
 </table>
 
 {% endblock content %}
