--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -29,7 +29,7 @@
         }
 
         .card{
-            width:300px !important;
+            width:32% !important;
             margin:5px !important;
         }
 
@@ -37,8 +37,7 @@
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
-            align-items: center;
-            
+            flex-wrap: wrap;
         }
     </style>
     <script src="https://hpcslag.github.io/hexo-theme-morgan/demo/js/tocas.js"></script>
