--- a/FeedPet/templates/feed_recommendation.html
+++ b/FeedPet/templates/feed_recommendation.html
@@ -24,7 +24,7 @@
             <td>飼料一號</td>
             <td>營養品</td>
             <td>
-                <button class="ts button">   <a href="{% url 'feed:feeddetail' %}">詳細資訊</a> </button>            
+                <button class="ts button">   <a href="{% url 'feed:feed_detail' %}">詳細資訊</a> </button>            
                  <button class="ts icon button"> <i class="heart icon"></i> </button>
                  
            </td>
@@ -35,7 +35,7 @@
             <td>飼料二號</td>
             <td>乾飼料</td>
             <td>
-                 <button class="ts button">   <a href="{% url 'feed:feeddetail' %}">詳細資訊</a> </button>       
+                   <button class="ts button">   <a href="{% url 'feed:feed_detail' %}">詳細資訊</a> </button>      
                  <button class="ts icon button"> <i class="heart icon"></i> </button>
                  
            </td>
