add master profile

--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -54,7 +54,7 @@
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
-                        <a class="item">個人資料</a>
+                        <a class="item" href="{% url 'master:profile' %}">個人資料</a>
                         <a class="item">我的寵物</a>
                     </div>
                 </div>
