--- a/FeedPet/templates/feed.html
+++ b/FeedPet/templates/feed.html
@@ -64,7 +64,9 @@
             <button class="ts button">
             <a href="{% url 'feed:feed_recommendation' %}"> 推薦飼料</a>
            </button>
-
+   <button class="ts button">
+            <a href="{% url 'feed:feeding_record' %}"> 查詢餵食紀錄</a>
+           </button>
         </form>
     </div>
     <div class="six wide column">
