--- a/FeedPet/templates/feeding_record.html
+++ b/FeedPet/templates/feeding_record.html
@@ -27,7 +27,7 @@
             <td>100</td>
 
                 <td>
-                   <button class="ts icon button">
+                   <button class="ts icon button negative">
                 <i class="delete icon"></i>  </button>
                  </td>
         </tr>
@@ -39,7 +39,7 @@
             <td><input type="date"></td>
             <td><input type="text"></td>
                    <td>
-                   <button class="ts icon button">
+                   <button class="ts icon button positive">
                 <i class="add icon"></i>  </button>
                  </td>
              </tr>
