--- a/FeedPet/templates/hotel_favorite.html
+++ b/FeedPet/templates/hotel_favorite.html
@@ -30,7 +30,7 @@
 
             <td> 
               <button class="ts button">   <a href="{% url 'hotel:hotel_detail' %}">詳細資訊</a> </button>  
-            <button class="ts icon button"><i class="delete icon"></i>  </button>  </td>
+            <button class="ts icon button negative"><i class="delete icon"></i>  </button>  </td>
         </tr>
  
 
